--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.0",
+    "chokidar": "^1.7.0",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10"
+    "mongoose": "^4.11.10",
+    "watch": "^1.0.2"
   }
 }
